Fix index card-map-filters alignment

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -278,3 +278,7 @@ figure {
 .swiper-pagination-bullet-active{
   background-color:#8d7197;
 }
+
+.indexcardpage {
+  max-width: 1420px !important;
+}
